docs: automatically detect version for codeblocks

--- a/docs/en/assets/resources/_linux_install.mdx
+++ b/docs/en/assets/resources/_linux_install.mdx
@@ -6,8 +6,12 @@ import PkgList from "/src/components/PkgList";
 
 2. Unzip the software package
 
-   Place the package in any directory where the current user has read and write access, then execute the following command: `tar -xzvf TDengine-client-VERSION.tar.gz`
-   Replace VERSION with the actual version string.
+   Place the package in any directory where the current user has read and write access, then execute the following command:
+
+   ```shell tsdb-client
+   tar -xzvf TDengine-client-{{VERSION}}.tar.gz
+   ```
+
 3. Run the installation script
 
    After unzipping the package, you will see the following files (directories) in the unzipped directory:
