fix: update taoskeeper password handling to clarify special character support issue

--- a/docs/en/28-releases/03-notes/3.4.0.2.md
+++ b/docs/en/28-releases/03-notes/3.4.0.2.md
@@ -8,7 +8,7 @@ slug: /release-history/release-notes/3.4.0.2
 ## Features
 
   1. feat: Automatically create xnode during TSDB initialization
-  2. feat: Explorer License page show machine code
+  2. feat: Explorer License page shows machine code
   3. feat: taosX-agent support xnode ha
   4. feat: taosX support parquet files import
   5. feat: add SQL recording for STMT in adapter
@@ -25,20 +25,20 @@ slug: /release-history/release-notes/3.4.0.2
   6. enh: add notification mechanism related to user tokens
   7. enh: support upgrading clusters with old-version data encryption mechanism to new-version one
   8. enh: support creating TOTP secrets using the create totp_secret syntax
-  9. enh: Support both IPv4 & IPv6 protocol stacks
- 10. enh: support updating expiration time and policy for data encryption keys
- 11. enh: allow any chars in MQTT topic
- 12. enh: rename lag function to fill_forward and redevelop Lag function compatible with MySQL in follow-up
- 13. enh: improve performance of cols + last queries on virtual tables with only one original table
- 14. enh: support modifying permission control for users
- 15. enh: improve permission control for views and audits
- 16. enh: handle permission compatibility from version 3.3 to 3.4
- 17. enh: prohibit users from tampering with configuration files after data encryption takes effect
- 18. enh: optimize the notification content of stream period triggers by adding the trigger start time and end time fields (retaining the windowStart and windowEnd field names)
- 19. enh: adjust the upper limit of the original tables referenced by virtual tables from 1000 to 2000
- 20. enh: reduce the computing latency when stream query statements contain virtual table tag filter conditions
- 21. enh: optimize the syntax of stream statements to support the use of placeholders such as _twstart in the ORDER BY clause
- 22. enh: optimize the execution logic of outer join queries to resolve the issue where limit does not take effect when order by is not specified
+  9. enh: support both IPv4 & IPv6 protocol stacks
+  10. enh: support updating expiration time and policy for data encryption keys
+  11. enh: allow any chars in MQTT topic
+  12. enh: rename lag function to fill_forward and redevelop Lag function compatible with MySQL in follow-up
+  13. enh: improve performance of cols + last queries on virtual tables with only one original table
+  14. enh: support modifying permission control for users
+  15. enh: improve permission control for views and audits
+  16. enh: handle permission compatibility from version 3.3 to 3.4
+  17. enh: prohibit users from tampering with configuration files after data encryption takes effect
+  18. enh: optimize the notification content of stream period triggers by adding the trigger start time and end time fields (retaining the windowStart and windowEnd field names)
+  19. enh: adjust the upper limit of the original tables referenced by virtual tables from 1000 to 2000
+  20. enh: reduce the computing latency when stream query statements contain virtual table tag filter conditions
+  21. enh: optimize the syntax of stream statements to support the use of placeholders such as _twstart in the ORDER BY clause
+  22. enh: optimize the execution logic of outer join queries to resolve the issue where limit does not take effect when order by is not specified
 
 ## Fixes
 
@@ -48,21 +48,20 @@ slug: /release-history/release-notes/3.4.0.2
   4. fix: memory leak that occurs when UDF function initialization fails
   5. fix: influxdb error with backslash syntax in taosX
   6. fix: incorrect results when invoking the concat function in stream
-  7. fix: taoskeeper allow special chars in password
+  7. fix: special characters not supported in taoskeeper password  
   8. fix: inaccurate scheduled execution time for multi-level storage migration tasks
-  9. fix: migrate stuck in AVEVA Historian data-in
- 10. fix: incorrect results when the data in individual group windows is all NULL values during multi-group processing in state windows
- 11. fix: abnormal calculation results after deleting and rebuilding the result subtable of stream
- 12. fix: the client may crash when the concurrent write volume of STMT is high
- 13. fix: incorrect default time configuration issue for password reuse restrictions
- 14. fix: error while performing JOIN operations with subqueries without the FROM clause
- 15. fix: MySQL DataIn task may blocking when few data rows
- 16. fix: remove duplicate error details
- 17. fix: trigger logic error of the true_for option in stream when out-of-order data is written
- 18. fix: taosX native connection tmq error message
- 19. fix: possibly stuck on systemctl stop taosd caused by xnoded
- 20. fix: subscriptions created by a user cannot be canceled after the user is deleted
- 21. fix: crash while combined use of group_concat function and count_window
- 22. fix: fix create task error for opc
- 23. fix: failed to set user permissions in taosExplorer of v3.4.0 version
-
+  9. fix: migration stuck in AVEVA Historian data-in
+  10. fix: incorrect results when the data in individual group windows is all NULL values during multi-group processing in state windows
+  11. fix: abnormal calculation results after deleting and rebuilding the result subtable of stream
+  12. fix: the client may crash when the concurrent write volume of STMT is high
+  13. fix: incorrect default time configuration issue for password reuse restrictions
+  14. fix: error while performing JOIN operations with subqueries without the FROM clause
+  15. fix: MySQL DataIn task may block when few data rows
+  16. fix: remove duplicate error details
+  17. fix: trigger logic error of the true_for option in stream when out-of-order data is written
+  18. fix: taosX native connection tmq error message
+  19. fix: possibly stuck on systemctl stop taosd caused by xnoded
+  20. fix: subscriptions created by a user cannot be canceled after the user is deleted
+  21. fix: crash while combined use of group_concat function and count_window
+  22. fix: create task error for opc
+  23. fix: failed to set user permissions in taosExplorer of v3.4.0 version
