--- a/docs/zh/28-releases/03-notes/3.4.0.2.md
+++ b/docs/zh/28-releases/03-notes/3.4.0.2.md
@@ -47,7 +47,7 @@ description: 3.4.0.2 版本说明
   4. 修复：UDF 函数初始化失败时的内存泄漏问题
   5. 修复：taosX 迁移 influxdb 报错误语法存在 '\' 错误
   6. 修复：流计算调用 concat 函数返回结果错误的问题
-  7. 修复：taoskeeper 支持特殊字符密码
+  7. 修复：taoskeeper 不支持特殊字符密码的问题
   8. 修复：多级存储迁移任务定时执行时间不准确的问题
   9. 修复：AVEVA Historian 数据源迁移方式采集异常
  10. 修复：状态窗口处理多分组数据时，个别分组窗口内数据全为 NULL 值导致计算结果错误的问题
@@ -64,4 +64,3 @@ description: 3.4.0.2 版本说明
  21. 修复：group_concat 函数与 count_window 联合使用时的 crash 问题
  22. 修复：创建 OPC 的数据源任务报错
  23. 修复：v3.4.0 版本 taosExplorer 设置用户权限失败的问题
-
