docs: update C# connector version to 3.1.10 with support for TDengine TSDB Token authentication

--- a/docs/zh/14-reference/05-connector/40-csharp.mdx
+++ b/docs/zh/14-reference/05-connector/40-csharp.mdx
@@ -24,6 +24,7 @@ import RequestId from "./_request_id.mdx";
 
 | Connector 版本 | 主要变化                             | TDengine TSDB 版本 |
 |:-------------|:---------------------------------|:-----------------|
+| 3.1.10       | 支持 TDengine TSDB Token 验证。       | -                |
 | 3.1.9        | stmt 对外接口不变，内部重构为 stmt2 实现。      | -                |
 | 3.1.8        | 支持连接级别时区设置，严格校验 stmt 绑定类型与数据库类型。 | -                |
 | 3.1.7        | 支持 IPv6 连接，支持 DECIMAL 类型。        | 3.3.6.0 及更高版本    |
